// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExternalServiceRouterForm render should render 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header call_external_service"
      >
        <div
          class="title_container"
        >
          <div
            class="title"
          >
            Call External Service
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <p>
            When a contact arrives at this point in your flow...
          </p>
          <div>
            <div
              class="normal "
            >
              <temba-select
                data-testid="temba_select_type"
                errors="[]"
                expressions=""
                name="type"
                namekey="description"
                searchable="true"
                valuekey="type"
                values="[{\\"type\\":\\"call_external_service\\",\\"name\\":\\"Call External Service\\",\\"description\\":\\"Call a external service\\",\\"localizeableKeys\\":[\\"exists\\"],\\"aliases\\":[\\"split_by_external_service\\"],\\"filter\\":\\"external_service\\"}]"
              />
            </div>
          </div>
        </div>
        
        <div>
          <p>
            <span>
              Action
            </span>
          </p>
          <div
            class="normal "
          >
            <temba-select
              data-testid="temba_select_external_service_call"
              errors="[]"
              expressions=""
              name="External Service Call"
              namekey="verboseName"
              placeholder="Select the call from external service to do"
              valuekey="value"
              values="[]"
            />
          </div>
        </div>
        <div
          class="optional_text_input"
        >
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <div
              class="unnnic-text-area sm normal"
              data-passed-props="[object Object]"
              data-v-a95e6368=""
            >
              <div
                class="label"
                data-v-a95e6368=""
              >
                Result Name
              </div>
              <textarea
                data-v-a95e6368=""
                maxlength="64"
              />
              <div
                class="helper"
                data-v-a95e6368=""
              >
                 6/64 
              </div>
              <!---->
            </div>
          </div>
          By naming the result, you can reference it later using @results.result
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="right_buttons"
          >
            <div
              class="btn secondary  "
              style="margin-left: 0px; margin-top: 0px;"
            >
              Cancel
            </div>
            <div
              class="btn primary  "
              style="margin-left: 10px; margin-top: 0px;"
            >
              Ok
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ExternalServiceRouterForm updates should save changes 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header call_external_service"
      >
        <div
          class="title_container"
        >
          <div
            class="title"
          >
            Call External Service
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <p>
            When a contact arrives at this point in your flow...
          </p>
          <div>
            <div
              class="normal "
            >
              <temba-select
                data-testid="temba_select_type"
                errors="[]"
                expressions=""
                name="type"
                namekey="description"
                searchable="true"
                valuekey="type"
                values="[{\\"type\\":\\"call_external_service\\",\\"name\\":\\"Call External Service\\",\\"description\\":\\"Call a external service\\",\\"localizeableKeys\\":[\\"exists\\"],\\"aliases\\":[\\"split_by_external_service\\"],\\"filter\\":\\"external_service\\"}]"
              />
            </div>
          </div>
        </div>
        <div>
          <p>
            <span>
              Integration with... 
            </span>
          </p>
          <div
            class="ele"
          >
            <div
              class="normal "
            >
              <temba-select
                cachekey="0"
                data-testid="temba_select_external_service"
                errors="[]"
                expressions=""
                name="External Service"
                namekey="name"
                placeholder="Select the external service to use"
                valuekey="uuid"
                values="[{\\"uuid\\":\\"4b154b06-5ecd-43d9-afca-39738e6859d7\\",\\"name\\":\\"omie dummy project\\",\\"external_service_type\\":\\"omie\\"}]"
              />
            </div>
          </div>
        </div>
        <div>
          <p>
            <span>
              Action
            </span>
          </p>
          <div
            class="normal "
          >
            <temba-select
              data-testid="temba_select_external_service_call"
              errors="[]"
              expressions=""
              name="External Service Call"
              namekey="verboseName"
              placeholder="Select the call from external service to do"
              valuekey="value"
              values="[]"
            />
          </div>
        </div>
        <div
          class="optional_text_input"
        >
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <div
              class="unnnic-text-area sm normal"
              data-passed-props="[object Object]"
              data-v-a95e6368=""
            >
              <div
                class="label"
                data-v-a95e6368=""
              >
                Result Name
              </div>
              <textarea
                data-v-a95e6368=""
                maxlength="64"
              />
              <div
                class="helper"
                data-v-a95e6368=""
              >
                 6/64 
              </div>
              <!---->
            </div>
          </div>
          By naming the result, you can reference it later using @results.result
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="right_buttons"
          >
            <div
              class="btn secondary  "
              style="margin-left: 0px; margin-top: 0px;"
            >
              Cancel
            </div>
            <div
              class="btn primary  "
              style="margin-left: 10px; margin-top: 0px;"
            >
              Ok
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ExternalServiceRouterForm updates should save changes 2`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "call": Object {
            "name": "IncluirContato",
            "params": Array [
              Object {
                "filters": Array [
                  Object {
                    "name": "nCod",
                    "type": "integer",
                    "verboseName": "Código do Contato",
                  },
                  Object {
                    "name": "cCodInt",
                    "required": true,
                    "type": "text",
                    "verboseName": "Código de Integração",
                  },
                  Object {
                    "name": "cNome",
                    "required": true,
                    "type": "string",
                    "verboseName": "Nome do contato",
                  },
                  Object {
                    "name": "cSobrenome",
                    "type": "string",
                    "verboseName": "Sobrenome do contato",
                  },
                  Object {
                    "name": "cCargo",
                    "type": "string",
                    "verboseName": "Cargo",
                  },
                  Object {
                    "name": "dDtNasc",
                    "type": "string",
                    "verboseName": "Data de Nascimento",
                  },
                  Object {
                    "name": "nCodVend",
                    "type": "integer",
                    "verboseName": "Código do Vendedor",
                  },
                  Object {
                    "name": "nCodConta",
                    "type": "integer",
                    "verboseName": "Código da Conta",
                  },
                ],
                "type": "identificacao",
                "verboseName": "Identificação",
              },
              Object {
                "filters": Array [
                  Object {
                    "maxLength": 60,
                    "name": "cEndereco",
                    "type": "string",
                    "verboseName": "Endereço do contato",
                  },
                  Object {
                    "maxLength": 200,
                    "name": "cCompl",
                    "type": "string",
                    "verboseName": "Complemento ",
                  },
                  Object {
                    "maxLength": 10,
                    "name": "cCEP",
                    "type": "string",
                    "verboseName": "CEP",
                  },
                  Object {
                    "maxLength": 60,
                    "name": "cBairro",
                    "type": "string",
                    "verboseName": "Bairro ",
                  },
                  Object {
                    "maxLength": 50,
                    "name": "cCidade",
                    "type": "string",
                    "verboseName": "Cidade ",
                  },
                  Object {
                    "maxLength": 50,
                    "name": "cUF",
                    "type": "string",
                    "verboseName": "Estado ",
                  },
                  Object {
                    "maxLength": 50,
                    "name": "cPais",
                    "type": "string",
                    "verboseName": "País",
                  },
                ],
                "type": "endereco",
                "verboseName": "Endereço",
              },
              Object {
                "filters": Array [
                  Object {
                    "maxLength": 5,
                    "name": "cDDDCel1",
                    "type": "string",
                    "verboseName": "DDD do celular 1",
                  },
                  Object {
                    "maxLength": 15,
                    "name": "cNumCel1",
                    "type": "string",
                    "verboseName": "Número do Celular 1",
                  },
                  Object {
                    "maxLength": 5,
                    "name": "cDDDCel2",
                    "type": "string",
                    "verboseName": "DDD do Celular 2",
                  },
                  Object {
                    "maxLength": 15,
                    "name": "cNumCel2",
                    "type": "string",
                    "verboseName": "Número do Celular 2",
                  },
                  Object {
                    "maxLength": 5,
                    "name": "cDDDTel",
                    "type": "string",
                    "verboseName": "DDD do Telefone",
                  },
                  Object {
                    "maxLength": 15,
                    "name": "cNumTel",
                    "type": "string",
                    "verboseName": "Número do Telefone",
                  },
                  Object {
                    "maxLength": 5,
                    "name": "cDDDFax",
                    "type": "string",
                    "verboseName": "DDD do Fax",
                  },
                  Object {
                    "maxLength": 15,
                    "name": "cNumFax",
                    "type": "string",
                    "verboseName": "Número do Fax",
                  },
                  Object {
                    "maxLength": 200,
                    "name": "cEmail",
                    "type": "string",
                    "verboseName": "E-mail do contato",
                  },
                  Object {
                    "maxLength": 100,
                    "name": "cWebsite",
                    "type": "string",
                    "verboseName": "WebSite",
                  },
                ],
                "type": "telefone_email",
                "verboseName": "Telefone e Email",
              },
              Object {
                "filters": Array [],
                "type": "cObs",
                "verboseName": "Observações",
              },
            ],
            "value": "IncluirContato",
            "verboseName": "Inserir Contato",
          },
          "external_service": Object {
            "external_service_type": "omie",
            "name": "Omie dummy project 2",
            "uuid": "5b154b06-5ecd-43d9-afca-39738e6859d7",
          },
          "params": Array [
            Object {
              "data": Object {
                "validationFailures": Array [],
                "value": "data 1",
              },
              "filter": Object {
                "value": Object {
                  "name": "cCodInt",
                  "required": true,
                  "type": "text",
                  "verboseName": "Código de Integração",
                },
              },
              "filters": Array [
                Object {
                  "name": "nCod",
                  "type": "integer",
                  "verboseName": "Código do Contato",
                },
                Object {
                  "name": "cCodInt",
                  "required": true,
                  "type": "text",
                  "verboseName": "Código de Integração",
                },
                Object {
                  "name": "cNome",
                  "required": true,
                  "type": "string",
                  "verboseName": "Nome do contato",
                },
                Object {
                  "name": "cSobrenome",
                  "type": "string",
                  "verboseName": "Sobrenome do contato",
                },
                Object {
                  "name": "cCargo",
                  "type": "string",
                  "verboseName": "Cargo",
                },
                Object {
                  "name": "dDtNasc",
                  "type": "string",
                  "verboseName": "Data de Nascimento",
                },
                Object {
                  "name": "nCodVend",
                  "type": "integer",
                  "verboseName": "Código do Vendedor",
                },
                Object {
                  "name": "nCodConta",
                  "type": "integer",
                  "verboseName": "Código da Conta",
                },
              ],
              "required": undefined,
              "type": "identificacao",
              "uuid": "2dc85899-0577-4f1b-a620-f12094e34b5e",
              "valid": true,
              "verboseName": "Identificação",
            },
            Object {
              "data": Object {
                "validationFailures": Array [],
                "value": "data 2",
              },
              "filter": Object {
                "value": Object {
                  "name": "cNome",
                  "required": true,
                  "type": "string",
                  "verboseName": "Nome do contato",
                },
              },
              "filters": Array [
                Object {
                  "name": "nCod",
                  "type": "integer",
                  "verboseName": "Código do Contato",
                },
                Object {
                  "name": "cCodInt",
                  "required": true,
                  "type": "text",
                  "verboseName": "Código de Integração",
                },
                Object {
                  "name": "cNome",
                  "required": true,
                  "type": "string",
                  "verboseName": "Nome do contato",
                },
                Object {
                  "name": "cSobrenome",
                  "type": "string",
                  "verboseName": "Sobrenome do contato",
                },
                Object {
                  "name": "cCargo",
                  "type": "string",
                  "verboseName": "Cargo",
                },
                Object {
                  "name": "dDtNasc",
                  "type": "string",
                  "verboseName": "Data de Nascimento",
                },
                Object {
                  "name": "nCodVend",
                  "type": "integer",
                  "verboseName": "Código do Vendedor",
                },
                Object {
                  "name": "nCodConta",
                  "type": "integer",
                  "verboseName": "Código da Conta",
                },
              ],
              "required": undefined,
              "type": "identificacao",
              "uuid": "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
              "valid": true,
              "verboseName": "Identificação",
            },
          ],
          "result_name": "My External Service Result",
          "type": "call_external_service",
          "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
        },
      ],
      "exits": Array [
        Object {
          "destination_uuid": null,
          "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
        },
        Object {
          "destination_uuid": null,
          "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "Success",
            ],
            "category_uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
            "type": "has_category",
            "uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
          },
        ],
        "categories": Array [
          Object {
            "exit_uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
            "name": "Success",
            "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
          },
          Object {
            "exit_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
            "name": "Failure",
            "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
          },
        ],
        "default_category_uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
        "operand": "@results.my_external_service_result",
        "type": "switch",
      },
      "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
    },
    "ui": Object {
      "config": Object {},
      "position": null,
      "type": "split_by_external_service",
    },
  },
]
`;
